--- a/src/components/Favicon.astro
+++ b/src/components/Favicon.astro
@@ -2,8 +2,11 @@
 
 <script>
   const favicon = document.querySelector('link[rel="icon"]')!
-  document.addEventListener('visibilitychange', () => {
-    const hidden = document.hidden
-    favicon.setAttribute('href', hidden ? '/inactive-favicon.png' : '/favicon.png')
+  const html = document.querySelector('html')!
+  const themeToggle = document.querySelector('#themeToggle')!
+  console.log(html.classList)
+  themeToggle.addEventListener('click', () => {
+    const darkMode = html.classList.length
+    favicon.setAttribute('href', darkMode > 0 ? '/dark-favicon.png' : '/favicon.png')
   })
 </script>
