--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -42,9 +42,9 @@ const secondaryPosts = [feature2, feature3];
       </span>
       <span class='name'>– I'm a software developer interested in design.</span>
     </h1>
-    <div class='marquee'>
+    <!-- <div class='marquee'>
       <Marquee />
-    </div>
+    </div> -->
   </div>
 
   </div>
