--- a/src/components/MorePost.astro
+++ b/src/components/MorePost.astro
@@ -72,11 +72,17 @@ const { date, href, title, description, last } = Astro.props;
 
   .container {
     border-radius: 0.5rem;
-    background: var(--lightBg);
   }
 
-  :global(.dark) .container {
-    background: var(--darkBg);
+  .container:hover,
+  .container:focus {
+    background: #e9e9e9;
+  }
+
+  :global(.dark)
+  .container:hover,
+  .container:focus {
+    background: #333333;
   }
 
   .title {
