favicon test fix

--- a/src/components/Favicon.astro
+++ b/src/components/Favicon.astro
@@ -7,6 +7,6 @@
   const themeToggle = document.querySelector('#themeToggle')!
   themeToggle.addEventListener('click', () => {
     const classLength = html.classList.length
-    favicon.setAttribute('href', classLength > 0 ? '/dark-favicon.png' : '/favicon.png')
+    favicon.setAttribute('href', classLength > 0 ? '/favicon.png' : '/dark-favicon.png')
   })
 </script>
