--- a/src/pages/posts/[...page].astro
+++ b/src/pages/posts/[...page].astro
@@ -66,5 +66,6 @@ const { page } = Astro.props;
     flex-direction: column;
     gap: 1rem;
     margin-bottom: 4rem;
+    padding: 0;
   }
 </style>
