--- a/src/components/SocialLink.astro
+++ b/src/components/SocialLink.astro
@@ -4,7 +4,7 @@ import Icon from 'astro-icon'
 const { link, icon, name, color, github} = Astro.props
 ---
 
-<a class='icon wavy-exempt' href={link} target="_blank" rel="noreffer noopener">
+<a class='icon wavy-exempt' href={link}>
   <Icon name={icon} size="44" color={color ? color : ''} class={github ? 'github' : ''}/>
   {name ? name : ''}
 </a>
