--- a/src/components/Pagination.astro
+++ b/src/components/Pagination.astro
@@ -27,56 +27,26 @@ const { prevUrl, nextUrl } = Astro.props;
   nav {
     display: flex;
     justify-content: space-between;
-    align-items: center;
+    align-items: baseline;
     margin-bottom: 4rem;
   }
 
   a {
-    background-image: none;
-    border-bottom: none;
     color: var(--text-color);
-    font-family: 'Inter', sans-serif;
-    box-shadow: inset 0 0 0.5px 1px hsla(0, 0%,
-        100%, 0.075),
-      /* shadow ring 👇 */
-      0 0 0 1px hsla(0, 0%, 0%, 0.05),
-      /* multiple soft shadows 👇 */
-      0 0.3px 0.4px hsla(0, 0%, 0%, 0.02),
-      0 0.9px 1.5px hsla(0, 0%, 0%, 0.045),
-      0 3.5px 6px hsla(0, 0%, 0%, 0.09);
-    padding: 0.75rem;
-    border-radius: 0.5rem;
-    transition: 0.2s;
-    background: white;
-    align-items: center;
+    border-color: rgba(0, 0, 0, 0);
+    padding: 0.25rem 0.5rem;
+    border-radius: 0.25rem;
     display: flex;
-  }
-
-  :global(.dark) a {
-    background: #222222;
-    color: white;
-    box-shadow: inset 0 0 0.5px 1px hsla(0, 0%, 100%, 0.1),
-      /* 2. shadow ring 👇 */
-      0 0 0 1px hsla(230, 13%, 9%, 0.075),
-      /* 3. multiple soft shadows 👇 */
-      0 0.3px 0.4px hsla(230, 13%, 9%, 0.02),
-      0 0.9px 1.5px hsla(230, 13%, 9%, 0.045),
-      0 3.5px 6px hsla(230, 13%, 9%, 0.09);
+    align-items: center;
   }
 
   a:hover,
   a:focus {
-    color: var(--primary-color);
+    background: var(--selection-color);
   }
 
-  [href]:hover,
-  [href]:focus {
-    background-image: none !important;
-    padding: 0.75rem;
-  }
-
-  a:active {
-    transform: scale(0.97);
+  a:focus {
+    outline: 2px dotted var(--text-color);
   }
 
   .left {
