--- a/src/components/Contact.astro
+++ b/src/components/Contact.astro
@@ -1,5 +1,5 @@
 ---
-import CopyButton from '../components/CopyButton';
+import CopyButton from "../components/CopyButton";
 ---
 
 <hr class="hr-override" />
@@ -11,7 +11,7 @@ import CopyButton from '../components/CopyButton';
   </div>
 </div>
 
-<style>
+<!-- <style>
   .contact {
     display: grid;
     justify-content: center;
@@ -36,4 +36,4 @@ import CopyButton from '../components/CopyButton';
     border-bottom: 2px solid gray;
     opacity: 0.25;
   }
-</style>
+</style> -->
