--- a/src/components/ContentNote.astro
+++ b/src/components/ContentNote.astro
@@ -1,9 +1,9 @@
 ---
-const { type, content } = Astro.props
+const { type, content } = Astro.props;
 ---
 
-<div class='wrapper'>
-  <p>{ type === 'info' ? 'Info' : 'Tip' }</p>
+<div class="wrapper">
+  <p>{type === "info" ? "Info" : "Tip"}</p>
 </div>
 
 <style>
