--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,42 +1,20 @@
 ---
-import Marquee from '../components/Marquee.astro'
-import SocialLink from '../components/SocialLink.astro'
+import Marquee from "../components/Marquee.astro";
+import SocialLink from "../components/SocialLink.astro";
 
-
-const greenLink = '#ff0080';
-const blueLink = '#0000FF';
+const greenLink = "#ff0080";
+const blueLink = "#0000FF";
 ---
 
-<hr class="hr" />
-<footer>
-  <div class="footer-wrapper">
-    <div class='social-grid'>
-      <SocialLink
-        link="https://github.com/boogerbuttcheeks"
-        icon="ant-design:github-filled"
-        github
-      />
-      <SocialLink
-        link="https://www.linkedin.com/in/trevortylerlee/"
-        icon="mdi:linkedin"
-        color="#0a66c2"
-      />
-      <SocialLink
-        link="https://mstdn.social/@boogerbuttcheeks"
-        icon="mdi:mastodon"
-        color="#6364F6"
-      />
-      <SocialLink
-        link="https://twitter.com/boogerbuttcheek"
-        icon="ri:twitter-fill"
-        color="#1DA1F2"
-      />
-    </div>
-    <!-- <Marquee /> -->
+<footer class="mb-4">
+  <div class="flex gap-2">
+    <a href="https://github.com/boogerbuttcheeks">Github</a>⋅
+    <a href="https://www.linkedin.com/in/trevortylerlee/">LinkedIn</a>⋅
+    <p>trevortylerlee@gmail.com</p>
   </div>
 </footer>
 
-<style define:vars={{ blueLink, greenLink }}>
+<!-- <style define:vars={{ blueLink, greenLink }}>
   .footer-wrapper {
     display: grid;
   }
@@ -66,4 +44,4 @@ const blueLink = '#0000FF';
       margin-top: 0;
     }
   }
-</style>
+</style> -->
