--- a/src/components/Marquee.astro
+++ b/src/components/Marquee.astro
@@ -1,16 +1,22 @@
 ---
 ---
 
-  <!-- <div class='container' aria-hidden="true">
+<!-- <div class='container' aria-hidden="true">
     <div id="marq" class='wrapper'>
       <img src="/pokemon/magikarp.gif" alt="magikarp" />
     </div>
   </div> -->
-  <div>
-  <marquee aria-hidden="true" id="marq" aria-hidden="true" scrolldelay="120" scrollamount="4">
+<div>
+  <marquee
+    aria-hidden="true"
+    id="marq"
+    aria-hidden="true"
+    scrolldelay="120"
+    scrollamount="4"
+  >
     <img src="/pokemon/magikarp.gif" alt="magikarp" />
   </marquee>
-  </div>
+</div>
 
 <style>
   .container {
@@ -19,33 +25,33 @@
   }
 
   @media (prefers-reduced-motion: no-preference) {
-  .container {
-    overflow-x: hidden;
-    display: inline;
-  }
-
-  .wrapper {
-    white-space: nowrap;
-    overflow: hidden;
-    position: relative;
-    animation: scroll 24s linear infinite;
-    width: 100%;
-    /* outline: 2px solid blue; */
-  }
-  
-  .wrapper img {
-    display: inline-block;
-    vertical-align: middle;
-  }
-
-  @keyframes scroll {
-    0% {
-      transform: translateX(110%);
+    .container {
+      overflow-x: hidden;
+      display: inline;
     }
-    100% {
-      transform: translateX(-25%);
+
+    .wrapper {
+      white-space: nowrap;
+      overflow: hidden;
+      position: relative;
+      animation: scroll 24s linear infinite;
+      width: 100%;
+      /* outline: 2px solid blue; */
     }
-  }
+
+    .wrapper img {
+      display: inline-block;
+      vertical-align: middle;
+    }
+
+    @keyframes scroll {
+      0% {
+        transform: translateX(110%);
+      }
+      100% {
+        transform: translateX(-25%);
+      }
+    }
   }
 </style>
 
@@ -84,4 +90,3 @@
   let marq = document.getElementById("marq");
   marq.innerHTML = `<img src=${`/pokemon/${pokemon}.gif`} alt=${`${pokemon}`} />`;
 </script>
-
