--- a/src/components/SocialLink.astro
+++ b/src/components/SocialLink.astro
@@ -1,16 +1,20 @@
 ---
-import Icon from 'astro-icon'
+import Icon from "astro-icon";
 
-const { link, icon, name, color, github} = Astro.props
+const { link, icon, name, color, github } = Astro.props;
 ---
 
-<a class='icon wavy-exempt' href={link}>
-  <Icon name={icon} size="44" color={color ? color : ''} class={github ? 'github' : ''}/>
-  {name ? name : ''}
+<a class="icon wavy-exempt" href={link}>
+  <Icon
+    name={icon}
+    size="44"
+    color={color ? color : ""}
+    class={github ? "github" : ""}
+  />
+  {name ? name : ""}
 </a>
 
 <style>
-
   .icon {
     all: unset;
     display: flex;
