--- a/src/pages/posts/[slug].astro
+++ b/src/pages/posts/[slug].astro
@@ -24,12 +24,12 @@ const {Content} = await post.render()
   <div>
     {post.data.image ? <img src={post.data.image.src} alt={post.data.image.alt} /> : <></> }
     <div class="textWrapper">
-    <h1 class={post.image ? '' : 'title'}>{post.data.title}</h1>
+    <h1 class={post.image ? '' : 'text-2xl font-semibold'}>{post.data.title}</h1>
 
-    {post.data.date && <p class="pub-date">Posted {formatDate(post.data.date)}</p>}
+    {post.data.date && <p class="mb-4">Posted {formatDate(post.data.date)}</p>}
     
-    <hr />
-    <div class="content">
+    <hr/>
+    <div class="content mb-12">
       <Content />
     </div>
     </div>
@@ -39,39 +39,10 @@ const {Content} = await post.render()
 <style>
   .textWrapper {
     /* outline: 2px solid blue; */
-    max-width: 64ch;
     margin: 0 auto;
-  }
-
-  .content {
-    /* outline: 2px solid red; */
-  }
-
-  .pub-date {
-    margin-top: 0.5rem;
-  }
-
-  h1 {
-    line-height: 1;
-  }
-
-  img,
-  .title {
-    margin-top: 3rem;
-  }
-
-  .content {
-    margin-top: 2rem;
   }
 
   .calendar-emoji {
     font-style: normal;
-  }
-
-  @media (min-width: 40rem) {
-    img,
-    .title {
-      margin-top: 6rem;
-    }
   }
 </style>
