--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,257 +1,55 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap");
 /* @import url('https://fonts.googleapis.com/css2?family=Unbounded:wght@200;300;400;500;600;700;800;900&display=swap'); */
-@import url('https://fonts.googleapis.com/css2?family=Atkinson+Hyperlegible:ital,wght@0,400;0,700;1,400;1,700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Atkinson+Hyperlegible:ital,wght@0,400;0,700;1,400;1,700&display=swap");
 
-
-/* Based on modularscale.com */
-:root {
-  --size-300: 0.75rem;
-  --size-400: 1rem;
-  --size-500: 1.35rem;
-  --size-600: 1.64rem;
-  --size-700: 2.4rem;
-  --size-800: 3.2rem;
-  --size-900: 4.2rem;
-  --bg-color: #F2F2F7;
-  --text-color: rgb(26, 30, 43);
-  --primary-color: black;
-  --code-bg-color: #0c1117;
-  --link-color: blue;
-  --selection-color: #e9e9e9;
-}
-
-.dark body {
-  --bg-color: #000000;
-  --text-color: rgb(245, 245, 240);
-  --primary-color: white;
-  --code-bg-color: white;
-  --link-color: #ff0080;
-  --selection-color: #333333;
-}
-
-body {
-  background: var(--bg-color);
-  color: var(--text-color);
-  font-family: 'Atkinson Hyperlegible', sans-serif;
-}
-
-.wrapper {
-  margin: 0 auto;
-  padding: 2rem 1rem 0 1rem;
-  max-width: 800px;
-}
-
-
-/* Link styling */
-a {
-  color: var(--link-color);
-  text-decoration: none;
-  border-bottom: 2px solid var(--link-color);
-}
-
-/* [href]:hover {
-  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg id='squiggle-link' xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' xmlns:ev='http://www.w3.org/2001/xml-events' viewBox='0 0 20 4'%3E%3Cstyle type='text/css'%3E.squiggle{animation:shift .3s linear infinite;}@keyframes shift {from {transform:translateX(0);}to {transform:translateX(-20px);}}%3C/style%3E%3Cpath fill='none' stroke='%23000000' stroke-width='2' class='squiggle' d='M0,3.5 c 5,0,5,-3,10,-3 s 5,3,10,3 c 5,0,5,-3,10,-3 s 5,3,10,3'/%3E%3C/svg%3E");
-  background-position: 0 100%;
-  background-repeat: repeat-x;
-  background-size: 20%;
-  border-bottom: 0;
-  text-decoration: none;
-  padding-bottom: 0.25em;
-  background-size: auto 4px;
-}
-
-.dark [href]:hover {
-  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg id='squiggle-link' xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' xmlns:ev='http://www.w3.org/2001/xml-events' viewBox='0 0 20 4'%3E%3Cstyle type='text/css'%3E.squiggle{animation:shift .3s linear infinite;}@keyframes shift {from {transform:translateX(0);}to {transform:translateX(-20px);}}%3C/style%3E%3Cpath fill='none' stroke='%23ffffff' stroke-width='2' class='squiggle' d='M0,3.5 c 5,0,5,-3,10,-3 s 5,3,10,3 c 5,0,5,-3,10,-3 s 5,3,10,3'/%3E%3C/svg%3E");
-} */
-
-/* Home logo */
-.wavy-exempt {
-  background-image: none !important;
-  border-bottom: none;
-  padding-bottom: 0 !important;
-  max-height: 48px;
-}
-
-:focus {
-  border-radius: 1px;
-  outline: 2px solid var(--primary-color);
-  outline-offset: 0.25rem;
-}
-
-main:focus {
-  outline: none;
-}
-
-/* Headings */
-h1,
-h2,
-h3,
-h4 {
-  line-height: 1.25;
-  /* transition: 0.2s; */
-  font-family: 'Inter', sans-serif
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
 h1 {
-  font-size: var(--size-700);
+  @apply text-2xl font-bold;
 }
 
 h2 {
-  font-size: var(--size-600);
+  @apply text-xl font-bold;
 }
 
 h3 {
-  font-size: var(--size-500);
-}
-
-p {
-  font-size: var(--size-400);
-}
-
-/* Misc */
-img {
-  max-width: min(55rem, 100%);
-  border-radius: 8px;
-}
-
-blockquote {
-  padding-left: var(--size-600);
-  border-left: 4px solid;
-  font-style: italic;
-}
-
-blockquote {
-  font-size: 1rem;
-}
-
-::selection {
-  color: white;
-  background: var(--primary-color);
-}
-
-.dark ::selection {
-  color: black;
-}
-
-/* .flow>*+* {
-  margin-top: var(--flow-space, 1em);
-} */
-
-hr {
-  /* margin-top: var(--size-400);
-  margin-bottom: var(--size-400); */
-  border-bottom: 1px solid gray;
-  opacity: 0.25;
+  @apply text-lg font-bold;
 }
 
 figcaption {
-  opacity: 0.7;
-  text-align: center;
+  @apply text-sm text-center mb-4 mt-2 opacity-75
 }
 
-p code {
-  background-color: #ddd;
-  border-radius: 4px;
-  padding: 0 0.2em;
-  white-space: pre;
+li {
+  @apply list-disc;
 }
 
-.dark p code {
-  background-color: #333;
+pre {
+  @apply my-4
 }
 
-/* Larger viewports */
-@media (min-width: 40rem) {
-  h1 {
-    font-size: var(--size-800);
+img {
+  @apply max-w-full py-4
+}
+
+hr {
+  @apply mb-8
+}
+
+@layer base {
+  a {
+    @apply underline text-blue-700 dark:text-blue-300;
   }
 
-  h2 {
-    font-size: var(--size-700);
-  }
-
-  p {
-    font-size: var(--size-400);
-  }
-
-  hr {
-    margin-top: var(--size-600);
-    margin-bottom: var(--size-600);
-  }
+  /* html.dark a {
+    @apply text-red-200
+  } */
 }
 
-/* CSS Reset below */
-
-/* Box sizing rules */
-*,
-*::before,
-*::after {
-  box-sizing: border-box;
-}
-
-/* Remove default margin */
-body,
-h1,
-h2,
-h3,
-h4,
-figure,
-blockquote,
-dl,
-dd {
-  margin: 0;
-}
-
-/* Remove list styles on ul, ol elements with a list role, which suggests default styling will be removed */
-ul[role='list'],
-ol[role='list'] {
-  list-style: none;
-}
-
-/* Set core root defaults */
-html:focus-within {
-  scroll-behavior: smooth;
-}
-
-/* Set core body defaults */
-body {
-  min-height: 100vh;
-  text-rendering: optimizeSpeed;
-  line-height: 1.5;
-}
-
-/* A elements that don't have a class get default styles */
-a:not([class]) {
-  text-decoration-skip-ink: auto;
-}
-
-/* Make images easier to work with */
-img,
-picture {
-  max-width: 100%;
-  display: block;
-}
-
-/* Inherit fonts for inputs and buttons */
-input,
-button,
-textarea,
-select {
-  font: inherit;
-}
-
-/* Remove all animations, transitions and smooth scroll for people that prefer not to see them */
-@media (prefers-reduced-motion: reduce) {
-  html:focus-within {
-    scroll-behavior: auto;
-  }
-
-  *,
-  *::before,
-  *::after {
-    animation-duration: 0.01ms !important;
-    animation-iteration-count: 1 !important;
-    transition-duration: 0.01ms !important;
-    scroll-behavior: auto !important;
+@layer components {
+  .exempt-link {
+    @apply no-underline text-neutral-950 dark:text-neutral-50;
   }
 }
