--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -12,7 +12,7 @@ const blueLink = "#0000FF";
     <a href="https://github.com/boogerbuttcheeks">Github</a>⋅
     <a href="https://www.linkedin.com/in/trevortylerlee/">LinkedIn</a>⋅
     <!-- <p>trevortylerlee@gmail.com</p> -->
-    <CopyButton client:visible message="trevortylerlee@gmail.com" />
+    <CopyButton client:visible copyText="trevortylerlee@gmail.com" label="trevortylerlee@gmail.com" />
   </div>
 </footer>
 
