copy btn tab, phished warning, hero updated

--- a/src/components/Marquee.astro
+++ b/src/components/Marquee.astro
@@ -6,17 +6,18 @@
       <img src="/pokemon/magikarp.gif" alt="magikarp" />
     </div>
   </div> -->
-<div>
+  <span class='container'>
   <marquee
     aria-hidden="true"
     id="marq"
     aria-hidden="true"
     scrolldelay="120"
     scrollamount="4"
+    class="z-20 relative pointer-events-none"
   >
     <img src="/pokemon/magikarp.gif" alt="magikarp" />
   </marquee>
-</div>
+  </span>
 
 <style>
   .container {
