--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -52,6 +52,12 @@ const secondaryPosts = [feature2, feature3];
     ))
   }
   </div> -->
+
+  <div class="relative h-24 mb-10">
+    <Marquee />
+    <h1 class="absolute text-3xl top-1/2 -translate-y-1/2 z-0 hover:z-30">Software developer interested in design.</h1>
+  </div>
+
   <LatestPosts />
 </BaseLayout>
 
